# llm-ai-coach

./: .gitignore  pyproject.toml
.devcontainer/: Dockerfile
aicoach/: main.py
aicoach/plugins/: grade_goals_plugin.py
